fixes for sideNav on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,10 @@ body {
 	font-family: 'Raleway', sans-serif;
 }
 
+footer {
+	z-index: 5;
+}
+
 .hidden {
 	display: none;
 }
